<resources>
    <string name="app_name">AbzApp</string>
    <string name="try_again">Try again</string>
    <string name="that_email_is_already_registered">That email is already registered</string>
    <string name="got_it">Got it</string>
    <string name="user_successfully_registered">User successfully registered</string>
    <string name="testtask">TESTTASK</string>
    <string name="there_is_no_internet_connection">There is no internet connection</string>
    <string name="users">Users</string>
    <string name="sign_up">Sign up</string>
    <string name="your_name">Your name</string>
    <string name="required_field">Required field</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="_38_xxx_xxx_xx_xx">+38 (XXX) XXX - XX - XX</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="select_your_position">Select your position</string>
    <string name="frontend_developer">Frontend developer</string>
    <string name="backend_developer">Backend developer</string>
    <string name="designer">Designer</string>
    <string name="qa">QA</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="upload">Upload</string>
    <string name="try_again_later">Try again later</string>
    <string name="photo_is_required">Photo is required</string>
    <string name="choose_how_you_want_to_add_a_photo">Choose how you want to add a photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permissions_not_granted">Permissions not granted</string>
    <string name="your_photo">Your photo</string>
    <string name="image_selected">Image selected</string>
</resources>