<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.yuri_berezhnyi.abzapp.ui.signUp.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etYourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_24"
                android:background="@drawable/bg_search"
                android:ellipsize="end"
                android:hint="@string/your_name"
                android:padding="@dimen/margin_16"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYourNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:text="@string/required_field"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/etYourName"
                app:layout_constraintStart_toStartOf="@+id/etYourName"
                app:layout_constraintTop_toBottomOf="@+id/etYourName"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/bg_search"
                android:ellipsize="end"
                android:hint="@string/email"
                android:padding="@dimen/margin_16"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/etYourName"
                app:layout_constraintStart_toStartOf="@+id/etYourName"
                app:layout_constraintTop_toBottomOf="@+id/etYourName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:text="@string/invalid_email_format"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/bg_search"
                android:ellipsize="end"
                android:hint="@string/phone"
                android:padding="@dimen/margin_16"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneClue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:text="@string/_38_xxx_xxx_xx_xx"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneNumberError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:text="@string/required_field"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/select_your_position"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18" />

            <RadioButton
                android:id="@+id/rbFrontend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:padding="@dimen/margin_8"
                android:text="@string/frontend_developer"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <RadioButton
                android:id="@+id/rbBackend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:padding="@dimen/margin_8"
                android:text="@string/backend_developer"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <RadioButton
                android:id="@+id/rbDesigner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:padding="@dimen/margin_8"
                android:text="@string/designer"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <RadioButton
                android:id="@+id/rbQa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:padding="@dimen/margin_8"
                android:text="@string/qa"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llUploadYourPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:background="@drawable/bg_search"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_weight="1"
                    android:text="@string/upload_your_photo"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_18" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:text="@string/upload"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_16" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        android:background="@drawable/bg_button"
        android:paddingHorizontal="@dimen/margin_32"
        android:paddingVertical="@dimen/margin_16"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>